	PR c/15749 	* c-decl.c (grokdeclarator, finish_struct): Don't pedwarn for 	misuses of structures with flexible array members if 	in_system_header.

testsuite:
	* gcc.dg/pr15749-1.c, gcc.dg/pr15749-1.h: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@82506 138bc75d-0d04-0410-961f-82ee72b054a4